objects/wkitsm__ItscPublicSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>ITSC Public Settings</description>
    <fields>
        <fullName>wkitsm__CMDBCIUploadTimestamp__c</fullName>
        <label>Timestamp for CMDB CI Upload</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wkitsm__CmdbMigrationLastRun__c</fullName>
        <label>The time cmdb migration last ran</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wkitsm__DoesSkipWorkflowRules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Skip running ITSC - Workflow Rules. The setting is mainly used to avoid exception thrown by apex tests due to invocation of workflow email alerts for case creation, etc.</description>
        <label>Skip Workflow Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkitsm__ProcessingCMDBCIUpload__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processing CMDB CI Upload</label>
        <type>Checkbox</type>
    </fields>
    <label>ITSC Public Settings</label>
</CustomObject>